完善视频封面上传和显示